# Orbit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  test_uuid.c
include/orbit/: audio.h  config.h  event.h  log.h  macros.h  memory.h  rtp_engine.h  rtp_jitter.h  server.h  sip_router.h  string_view.h  thread.h  time.h  ws_bridge.h  ws_handler.h
scripts/: build.sh  format.sh  generate_version.cmake  loadtest.sh  profile.sh  run.sh
src/: CMakeLists.txt  main.c
src/audio/: g711_tables.h  resample.c  resample_sinc_table.h  transcode.c  vad.c  vad_gru_weights.h
src/core/: config.c  event.c  memory.c  server.c  thread.c
src/rtp/: dtmf.c  engine.c  jitter.c
src/sip/: router.c  sdp_parser.c
src/ws/: bridge.c  handler.c
test_client/: index.js  package-lock.json  package.json
tests/: CMakeLists.txt  test_audio_resampler.c  test_audio_transcode.c  test_audio_vad.c  test_config_audio.c  test_core.c  test_event.c  test_rtp.c  test_sip.c  test_ws.c
